# giveaway-bot

./: .gitignore  README.rst  setup.cfg
.circleci/: config.yml
giveaway/bot/: __main__.py  discord.py  giveaway.py  selection.py  youtube.py
giveaway/bot/service/: announce.py  chat.py  winner.py
giveaway_bot/: __main__.py  oauth.py  youtube.py
giveaway_bot/countdown/: index.html  main.mjs
giveaway_bot/http/: client.py
giveaway_bot/service/: announce.py  chat.py  winner.py
