[metadata]
name = giveaway-bot
url = https://github.com/blue-span/giveaway-bot
description = bluespan.gg giveaway winner calculation bot
long_description = file: README.rst
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages =
    giveaway_bot
    giveaway_bot.service
    giveaway_bot.http
    giveaway_bot.countdown
install_requires =
    h11
    xdg
    trio
    trio-websocket

[options.package_data]
giveaway_bot.countdown =
    *.html
    *.mjs
