[metadata]
name = giveaway-bot
url = https://github.com/blue-span/giveaway-bot
description = bluespan.gg giveaway winner calculation bot
long_description = file: README.rst
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
version = attr: setuptools_scm.get_version

[options]
setup_requires =
    setuptools_scm
packages =
    giveaway
    giveaway.bot
    giveaway.bot.service
    giveaway.bot.countdown
install_requires =
    h11
    xdg
    trio
    trio-websocket
    pytz
    giveaway-misc

[options.package_data]
giveaway_bot.countdown =
    *.html
    *.mjs
